--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,40 @@
+@ARTICLE{Gavazzi:07,
+   author = {{Gavazzi}, R. and {Treu}, T. and {Rhodes}, J.~D. and {Koopmans}, L.~V.~E. and 
+	{Bolton}, A.~S. and {Burles}, S. and {Massey}, R.~J. and {Moustakas}, L.~A.
+	},
+    title = "{The Sloan Lens ACS Survey. IV. The Mass Density Profile of Early-Type Galaxies out to 100 Effective Radii}",
+  journal = {\apj},
+   eprint = {astro-ph/0701589},
+ keywords = {Cosmology: Dark Matter, Galaxies: Elliptical and Lenticular, cD, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2007,
+    month = sep,
+   volume = 667,
+    pages = {176-190},
+      doi = {10.1086/519237},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...667..176G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Bolton:08,
+   author = {{Bolton}, A.~S. and {Treu}, T. and {Koopmans}, L.~V.~E. and 
+	{Gavazzi}, R. and {Moustakas}, L.~A. and {Burles}, S. and {Schlegel}, D.~J. and 
+	{Wayth}, R.},
+    title = "{The Sloan Lens ACS Survey. VII. Elliptical Galaxy Scaling Laws from Direct Observational Mass Measurements}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0805.1932},
+ keywords = {Galaxies: Elliptical and Lenticular, cD, Cosmology: Gravitational Lensing, Surveys},
+     year = 2008,
+    month = sep,
+   volume = 684,
+    pages = {248-259},
+      doi = {10.1086/589989},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...684..248B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Zhang:07,
    author = {{Zhang}, M. and {Jackson}, N. and {Porcas}, R.~W. and {Browne}, I.~W.~A.
 	},
